fix white space on right side (only on mobile)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -186,6 +186,10 @@
     grid-template-columns: 1fr;
   }
 
+  .main-content {
+    overflow-x: hidden;
+  }
+
   .gallery-img {
     width: 100%;
     max-width: 100%;
